error
 File "<ipython-input-3-f9caf7b36892>", line 30
    "where": f"tradeId IN ({','.join(map(lambda x: f'\'{x}\'', trade_ids))}) AND sourceSystemId = 'SystemX'",
            ^
SyntaxError: f-string expression part cannot include a backslash
